<resources>
    <string name="app_name">firstApp</string>
    <string name="app_master">Hello</string>
    <string name="action_settings">Settings</string>
    <string name="comB1" translatable="false">1</string>
    <string name="comB2" translatable="false">2</string>
    <string name="comB3" translatable="false">3</string>
    <string name="comB4" translatable="false">4</string>
    <string name="comB5" translatable="false">5</string>
    <string name="comB6" translatable="false">6</string>
    <string name="comB7" translatable="false">7</string>
    <string name="comB8" translatable="false">8</string>
    <string name="comB9" translatable="false">9</string>
    <string name="comB0" translatable="false">0</string>
    <string name="comBj1" translatable="false">+</string>
    <string name="comBj2" translatable="false">-</string>
    <string name="comBc1" translatable="false">*</string>
    <string name="comBc2" translatable="false">/</string>
    <string name="comBd1" translatable="false">.</string>
    <string name="comBd2" translatable="false">=</string>
    <string name="bg" translatable="false">background</string>
    <string name="congratulations">Happy   Birthday!</string>
    <string name="from">Your Tom</string>
    <string name="convIn">please input temperature</string>
    <string name="convB">convert it to Fahrenheit degree</string>
    <string name="convSh">result:</string>
    <string name="teamName1">teamA</string>
    <string name="score" translatable="false">0</string>
    <string name="label_add1">+1 points</string>
    <string name="label_add2">+2 points</string>
    <string name="label_add3">+3 points</string>
    <string name="label_reset">reset</string>
    <string name="teamName2">teamB</string>
    <string name="hint_rmb">Please input your RMB</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_config">configure</string>
    <string name="btn_save">save</string>
    <string name="label_open_list">Open Rate List</string>
    <string name="hint_keyword">Please input your keyword</string>
    <string name="non_data" translatable="false">No data!</string>
    <string name="label_first" translatable="false">First Page</string>
    <string name="label_second" translatable="false">Second Page</string>
    <string name="label_third" translatable="false">Third Page</string>
    <string name="lable_add1" translatable="false">+1 points</string>
    <string name="lable_add2" translatable="false">+1 points</string>
    <string name="lable_add3" translatable="false">+1 points</string>
    <string name="hello_world">Welcome</string>
    <string name="lab_approve">approve</string>
    <string name="lab_object">object</string>
    <string name="lab_abstain">abstain</string>
</resources>
