<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".RateCallActivity">

    <TextView
        android:id="@+id/currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:text="@string/app_name"/>

    <EditText
        android:id="@+id/rmb2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_rmb"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:layout_marginBottom="24dp">
    </EditText>

    <TextView
        android:id="@+id/showOut2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="35sp"
        android:text="@string/score"
        android:layout_marginBottom="24dp">
    </TextView>

</LinearLayout>